examples/test/testpolicy12716.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12716
  namespace: namespace179
spec:
  podSelector:
    matchLabels:
      key43: value30
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key1: value38
          key42: value20
          key37: value30
      podSelector:
        matchLabels:
          key0: value39
